Fix login box height on IE11
Refs #956

--- a/ng2-components/ng2-alfresco-login/src/components/alfresco-login.component.css
+++ b/ng2-components/ng2-alfresco-login/src/components/alfresco-login.component.css
@@ -29,6 +29,7 @@
 }
 
 :host .login-card-wide.mdl-card {
+    align-self: center;
     margin: auto;
     border-radius: 8px;
     background-color: #ffffff;
